clean up RecordField module
also let module Run use the new interface

--- a/package.yaml
+++ b/package.yaml
@@ -47,6 +47,7 @@ default-extensions:
  - NoImplicitPrelude
  - OverloadedStrings
  - ImportQualifiedPost
+ - TypeApplications
 
 library:
   source-dirs: source-lib
